apps/open-webui/open-webui-service.yml
apiVersion: v1
kind: Service
metadata:
  name: open-webui
  namespace: open-webui
  labels:
    app: open-webui
    app.kubernetes.io/name: open-webui
    argocd.argoproj.io/managed-by: argocd
spec:
  type: ClusterIP
  selector:
    app: open-webui
  ports:
    - name: http
      port: 80
      targetPort: http
